--- a/.github/workflows/deploy_manually.yml
+++ b/.github/workflows/deploy_manually.yml
@@ -11,12 +11,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/upload-artifact@v2
+    - uses: actions/checkout@v3
     - name: Build and deploy
       run: ./build.sh
 
     - name: Archive artifacs
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: emacs-gcc-pgtk
         path: ./deploy/emacs-gcc-pgtk_*.deb
